# simple-level-zero-samples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: util.hpp
samples/: CMakeLists.txt
samples/00_enumlevelzero/: CMakeLists.txt  main.cpp
samples/00_extendeddevicequeries/: CMakeLists.txt  main.cpp
samples/01_lzinfo/: CMakeLists.txt  main.cpp  zello_log.h
samples/02_hellosysman/: CMakeLists.txt  main.cpp
samples/04_julia/: CMakeLists.txt  julia.spv  main.cpp
samples/05_simpleoverlap/: CMakeLists.txt  main.cpp
samples/99_handlequery/: CMakeLists.txt  main.cpp
samples/vulkan/: CMakeLists.txt  README.md
samples/vulkan/00_juliavk/: CMakeLists.txt  juliavk.cl  juliavk.spv  main.cpp
samples/vulkan/01_nbodyvk/: CMakeLists.txt  main.cpp  nbodyvk.spv
